# LLM-assisted_Git_Workflow

./: .env.example  .gitignore  README.md  cli.py  commit_classifier.py  config.py  diff_parser.py  git_utils.py  llm_commit_generator.py  pyproject.toml  setup.py  technical-details.txt  test_cli_auto.py
.aigit/: config.yaml
.diffsense/: config.yaml
ai_git.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
diffsense/: cli.py  config.py  diff_parser.py  git_utils.py  llm_commit_generator.py
